Fix Hidilyn icon alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,7 @@ a {
     }
 
     #menu-slider .sports.up {
-        margin-top: 1vh;
+        margin-top: 0.5vh;
     }
 
     #menu .nav-btn {
